--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-fastapi==0.109.0
-pydantic==2.6.0
-python-dotenv==1.0.1
-redis==5.0.0
-supabase==1.0.0
-jinja2==3.1.2
+fastapi==0.115.2
 uvicorn[standard]==0.23.2
+pydantic==2.8.0
+python-dotenv==1.0.0
+redis==5.2.0
+httpx==0.24.1
